--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon -L index.js",
     "setup-db": "node ./database/setup.js",
-    "test": "npx jest --silent=false --detectOpenHandles"
+    "test": "npx jest --silent=false"
   },
   "author": "",
   "license": "ISC",
