--- a/api/package.json
+++ b/api/package.json
@@ -12,16 +12,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^5.3.0",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "bootstrap": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jest": "^29.6.1",
     "pg": "^8.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
-    "jest": "^29.6.1",
     "supertest": "^6.3.3",
     "uuid": "^9.0.0"
   },
