--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "react-test-renderer": "^18.2.0",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.17.0",
